# dict-tui

./: .gitignore  Cargo.toml  PROJECT.md  README.md
.github/workflows/: release.yml
src/: cache.rs  dictionary.rs  main.rs  render.rs  tui.rs
src/ai/: client.rs  mod.rs  prompt.rs
src/app/: mod.rs
src/cache/: definition_cache.rs  mod.rs  query_cache.rs
src/dict/: entry.rs  mod.rs  store.rs
src/render/: browser.rs  html.rs  mod.rs
src/ui/: config_editor.rs  mod.rs  search.rs
