[package]
name = "dict-tui"
version = "0.1.2"
edition = "2021"

[dependencies]
anyhow = "1.0"
crossterm = "0.28"
once_cell = "1.20"
ratatui = "0.29"
regex = "1.11"
reqwest = { version = "0.12", features = ["json", "blocking"] }
rs-mdict = "0.1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
url = "2.5"
dirs = "5.0"
